force-app/main/default/objects/AppPaymentReference__c.object
<CustomObject>
    <description>Application Payment Log for events consumed via App Payment Platform Event

TEAM: A2O
CONTACT: MAZ</description>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Application this payment log relates to</description>
        <inlineHelpText>Application this payment log relates to</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>AppPaymentRefs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Reference__c</fullName>
        <description>Reference Id for the CRM record</description>
        <inlineHelpText>Reference Id for the CRM record</inlineHelpText>
        <label>CRM Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CRM contact this payment log relates to</description>
        <inlineHelpText>CRM contact this payment log relates to</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>AppPaymentRefs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Applicant Email Reference</description>
        <inlineHelpText>Applicant Email Reference</inlineHelpText>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Reference__c</fullName>
        <description>Source File Date</description>
        <inlineHelpText>Source File Date</inlineHelpText>
        <label>Event Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Applicant First Name</description>
        <inlineHelpText>Applicant First Name</inlineHelpText>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Applicant Last Name</description>
        <inlineHelpText>Applicant Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Name__c</fullName>
        <description>Who is a reference for this payment</description>
        <inlineHelpText>Who is a reference for this payment</inlineHelpText>
        <label>Payer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Applicant Phone</description>
        <inlineHelpText>Applicant Phone</inlineHelpText>
        <label>Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Amount__c</fullName>
        <description>Amount we charged</description>
        <inlineHelpText>Amount we charged</inlineHelpText>
        <label>Service Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Settlement_Amount__c</fullName>
        <description>Settlement Amount on the transaction</description>
        <inlineHelpText>Settlement Amount on the transaction</inlineHelpText>
        <label>Settlement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Log status of this record</description>
        <inlineHelpText>Log status of this record</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>No Application found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <description>Unique Transaction Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Transaction Id</inlineHelpText>
        <label>Transaction Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Source__c</fullName>
        <description>Data Source for transaction</description>
        <inlineHelpText>Data Source for transaction</inlineHelpText>
        <label>Transaction Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>Visa, Amex, Bank Transfer etc.</description>
        <inlineHelpText>Visa, Amex, Bank Transfer etc.</inlineHelpText>
        <label>Transaction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>App Payment Reference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Contact__c</columns>
        <columns>CRM_Reference__c</columns>
        <columns>Email__c</columns>
        <columns>Settlement_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APPayRef-{0000}</displayFormat>
        <label>AppPayRef</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Payment References</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>